...
                android:layout_marginTop="8dp"
                android:text="Currency 2: --"
                android:textColor="#FFFFFF" />
        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pieChart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1A2561"
            android:text="Upload" />


        <Spinner
            android:id="@+id/spinner_family_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
