...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00FFFFFF"
        android:text="Family Plan" />

    <Button
        android:id="@+id/btn_Goals"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:backgroundTint="#00FFFFFF"
        android:text="Goals" />

    <Button
        android:id="@+id/btn_Budget"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
...
